--- a/SpecialLecture/20211127.md
+++ b/SpecialLecture/20211127.md
@@ -1,6 +1,5 @@
 # 20211127 - 오늘자 특강 요약
 
-※ 마이크를 끕시다. 소리가 나면 마이크가 자동적으로 켜지는 기능이 있는지 확인합시다. 수업을 들읍시다<br>
 ※ 어제 강의와 겹치는 내용이 많아 생략하였습니다.
 
 inline함수와 inline이 무시되는 경우에 대해 공부하자<br>
@@ -21,8 +20,8 @@ friend: A클래스 내에서 B클래스를 친구로 지정하면, B클래스는
 형변환 연산자는 반환자료형이 없다
 
 ```cpp
-operator int() const
-operator char*() const
+operator int() const;
+operator char*() const;
 ```
 
 다중정의를 할 수 없는 연산자
@@ -54,14 +53,16 @@ deque
 **연상 컨테이너(키를 이용)**
 
 set, map<br>
-이터레이터<br>
+
+**이터레이터**
+
 begin: 시작 원소<br>
 end: 마지막 원소의 다음원소
 
 ```cpp
 for(it = a.begin(); it < a.end(); it++) *it = i++;
 ```
-<br><br>
+<br>
 
 ### 예외처리
 
