--- a/SpecialLecture/20211126.md
+++ b/SpecialLecture/20211126.md
@@ -29,6 +29,10 @@
 기존 기출문제와 이번 시험의 차이점
 
 → C++14 문법이 포함됨
+
+@ C++14 추가내용
+
+초기화리스트 {}사용, r-value참조와 이동생성자, 템플릿 표현(class -> typename) 이정도
 <br><br>
 
 ## 클래스와 객체
